redisenho pag principal

--- a/index.html
+++ b/index.html
@@ -297,152 +297,7 @@ Triki Team" />
 
     </div>
 
-
-    <div class="container py-5 px-lg-5">
-        <div class="text-center pb-4 wow fadeInUp" data-wow-delay="0.1s">
-            <h5 class="text-primary-gradient fw-medium">ATRACTIVOS</h5>
-            <h1 class="mb-1">¿Qué te ofrecemos?</h1>
-            <hr class="divider" />
-            <br>
-        </div>
-        <div class="row gy-5 gx-4 justify-content-center">
-            <div class="col-lg-4 col-sm-6 text-center pt-4 wow fadeInUp" data-wow-delay="0.1s">
-                <div class="position-relative bg-light rounded pt-5 pb-4 px-4" id="cajitas_inicio">
-                    <div class="d-inline-flex align-items-center justify-content-center bg-primary-gradient rounded-circle position-absolute top-0 start-50 translate-middle shadow"
-                        style="width: 100px; height: 100px;">
-                        <i class="fa fa-running fa-3x text-white"></i>
-                    </div>
-                    <h5 class="mt-4 mb-3">Pruebas de Clubes</h5>
-                    <p class="mb-0">Un equipo masculino absoluto luchando por ascender a 1ª división. También equipo femenino en el gallego absoluto y equipos sub-20 y máster</p>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center pt-4 wow fadeInUp" data-wow-delay="0.3s">
-                <div class="position-relative bg-light rounded pt-5 pb-4 px-4" id="cajitas_inicio">
-                    <div class="d-inline-flex align-items-center justify-content-center bg-secondary-gradient rounded-circle position-absolute top-0 start-50 translate-middle shadow"
-                        style="width: 100px; height: 100px;">
-                        <i class="fa fa-building fa-3x text-white"></i>
-                    </div>
-                    <h5 class="mt-4 mb-3">Convenios con Instalaciones</h5>
-                    <p class="mb-0">Para aportar la mayor flexibilidad a los atletas, poseemos convenios con
-                        instalaciones locales de atletismo
-                    
-                    </p>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center pt-4 wow fadeInUp" data-wow-delay="0.5s">
-                <div class="position-relative bg-light rounded pt-5 pb-4 px-4" id="cajitas_inicio">
-                    <div class="d-inline-flex align-items-center justify-content-center bg-primary-gradient rounded-circle position-absolute top-0 start-50 translate-middle shadow"
-                        style="width: 100px; height: 100px;">
-                        <i class="fa fa-users fa-3x text-white"></i>
-                    </div>
-                    <h5 class="mt-4 mb-3">Grupos de entrenamiento</h5>
-                    <p class="mb-0">Tenemos grupos de tecnificación en todas las pruebas atléticas siempre
-                        asesorados por profesionales
-                    
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <br>
-
-
-
-
-
-    <section id="milestone" class="bg-cover">
-        <div class="container ">
-            <div class="row text-center">
-                <div class="col-lg-3 col-sm-3 col-6 mt-4">
-                    <div class="display-4">+100</div>
-                    <p class="mb-0">Atletas Federados</p>
-                </div>
-                <div class="col-lg-3 col-sm-3 col-6 mt-4">
-                    <div class="display-4">+7</div>
-                    <p class="mb-0">Clubes Asociados</p>
-                </div>
-                <div class="col-lg-3 col-sm-3 col-6 mt-4">
-                    <div class="display-4">+3,4K</div>
-                    <p class="mb-0">Seguidores en RRSS</p>
-                </div>
-                <div class="col-lg-3 col-sm-3 col-6 mt-4">
-                    <div class="display-4">+10</div>
-                    <p class="mb-0">Años de Historia</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-    <div class="container" style="padding-top: 4rem">
-        <div class="row justify-content-center">
-            <div class="col-lg-1 "></div>
-            <div class="col-lg-5  py-2">
-                <h1 class="text-center">ESTADÍSTICAS</h1>
-                <hr class="divider" />
-                <p> Descubre los récords del club realizados en las diferentes pruebas atléticas.
-                    Además, visualiza las mejores marcas personales de nuestros atletas con licencia.
-                    Sumérgete en las estadísticas que reflejan el esfuerzo y el éxito de nuestro
-                    talentoso equipo:</p>
-                <div class="d-flex justify-content-center align-items-center">
-                    <a href="./records_club.html" class="btn btn-primary" style="margin-right: 2%;">
-                        Récords del Club
-                    </a>
-
-
-                    <a href="./estadisticas_atleta.html" class="btn btn-primary" style="margin-right: 2%;">
-                        Estadísticas Atletas
-                    </a>
-
-                    <a href="./ranking_club.html" class="btn btn-primary">
-                        Ranking del Club
-                    </a>
-
-                </div>
-            </div>
-
-            <div class="col-lg-5 ">
-                <img src="img/estadisticas.webp" data-src="img/estadisticas.webp" loading="lazy"
-                    style="width: 60%; margin-left: 25%;" alt="Estadisticas">
-            </div>
-        </div>
-    </div>
-
-
-    <div class="container" style="padding-top: 4rem; padding-bottom: 4rem;">
-        <div class="row justify-content-center">
-            <div class="col-lg-1 "></div>
-            <div class="col-lg-5 d-flex justify-content-center align-items-center">
-                <img src="img/calendario.webp" style="width: 60%;" alt="Calendario">
-            </div>
-
-            <div class="col-lg-5  py-2">
-                <h1 class="text-center">CALENDARIO</h1>
-                <hr class="divider" />
-                <p> Te facilitamos un calendario de competiciones en Galicia tanto de pista cubierta, cross, pista al
-                    aire libre, carreras en ruta y carreras populares
-                    Descubre las fechas clave y no te pierdas ninguna oportunidad de participar en las mejores carreras
-                    de Galicia</p>
-                <div class="d-flex justify-content-center align-items-center">
-                    <a href="./calendario.html" class="btn btn-primary">
-                        Calendario de Competiciones
-                    </a>
-                </div>
-            </div>
-
-
-        </div>
-    </div>
-
-
-
-
-
-
-
-
-
-    <div id="projects" style="padding-top: 4rem; padding-bottom: 4rem;background-color: #F0F6FF">
+    <div id="projects" style="padding-top: 4rem; padding-bottom: 2rem;">
         <div class="container ">
             <div class="row">
                 <div class="text-center pb-4 wow fadeInUp" data-wow-delay="0.1s" style="margin-bottom: -5rem;">
@@ -485,6 +340,160 @@ Triki Team" />
             </div>
 
 
+        </div>
+    </div>
+
+
+    <br>
+
+
+
+
+
+    <section id="milestone" class="bg-cover">
+        <div class="container ">
+            <div class="row text-center">
+                <div class="col-lg-3 col-sm-3 col-6 mt-4">
+                    <div class="display-4">+100</div>
+                    <p class="mb-0">Atletas Federados</p>
+                </div>
+                <div class="col-lg-3 col-sm-3 col-6 mt-4">
+                    <div class="display-4">+7</div>
+                    <p class="mb-0">Clubes Asociados</p>
+                </div>
+                <div class="col-lg-3 col-sm-3 col-6 mt-4">
+                    <div class="display-4">+3,4K</div>
+                    <p class="mb-0">Seguidores en RRSS</p>
+                </div>
+                <div class="col-lg-3 col-sm-3 col-6 mt-4">
+                    <div class="display-4">+10</div>
+                    <p class="mb-0">Años de Historia</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <div class="container py-5 px-lg-5">
+        <div class="text-center pb-4 wow fadeInUp" data-wow-delay="0.1s">
+            <h5 class="text-primary-gradient fw-medium">ATRACTIVOS</h5>
+            <h1 class="mb-1">¿Qué te ofrecemos?</h1>
+            <hr class="divider" />
+            <br>
+        </div>
+        <div class="row gy-5 gx-4 justify-content-center">
+            <div class="col-lg-4 col-sm-6 text-center pt-4 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="position-relative bg-light rounded pt-5 pb-4 px-4" id="cajitas_inicio">
+                    <div class="d-inline-flex align-items-center justify-content-center bg-primary-gradient rounded-circle position-absolute top-0 start-50 translate-middle shadow"
+                        style="width: 100px; height: 100px;">
+                        <i class="fa fa-running fa-3x text-white"></i>
+                    </div>
+                    <h5 class="mt-4 mb-3">Pruebas de Clubes</h5>
+                    <p class="mb-0">Un equipo masculino absoluto luchando por ascender a 1ª división. También equipo
+                        femenino en el gallego absoluto y equipos sub-20 y máster</p>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 text-center pt-4 wow fadeInUp" data-wow-delay="0.3s">
+                <div class="position-relative bg-light rounded pt-5 pb-4 px-4" id="cajitas_inicio">
+                    <div class="d-inline-flex align-items-center justify-content-center bg-secondary-gradient rounded-circle position-absolute top-0 start-50 translate-middle shadow"
+                        style="width: 100px; height: 100px;">
+                        <i class="fa fa-building fa-3x text-white"></i>
+                    </div>
+                    <h5 class="mt-4 mb-3">Convenios con Instalaciones</h5>
+                    <p class="mb-0">Para aportar la mayor flexibilidad a los atletas, poseemos convenios con
+                        instalaciones locales de atletismo
+
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 text-center pt-4 wow fadeInUp" data-wow-delay="0.5s">
+                <div class="position-relative bg-light rounded pt-5 pb-4 px-4" id="cajitas_inicio">
+                    <div class="d-inline-flex align-items-center justify-content-center bg-primary-gradient rounded-circle position-absolute top-0 start-50 translate-middle shadow"
+                        style="width: 100px; height: 100px;">
+                        <i class="fa fa-users fa-3x text-white"></i>
+                    </div>
+                    <h5 class="mt-4 mb-3">Grupos de entrenamiento</h5>
+                    <p class="mb-0">Tenemos grupos de tecnificación en todas las pruebas atléticas siempre
+                        asesorados por profesionales
+
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div >
+        <div class="container" style="padding-top: 2rem">
+            <div class="row justify-content-center">
+                <div class="col-lg-1 "></div>
+                <div class="col-lg-5  py-2">
+                    <h1 class="text-center">ESTADÍSTICAS</h1>
+                    <hr class="divider" />
+                    <p> Descubre los récords del club realizados en las diferentes pruebas atléticas.
+                        Además, visualiza las mejores marcas personales de nuestros atletas con licencia.
+                        Sumérgete en las estadísticas que reflejan el esfuerzo y el éxito de nuestro
+                        talentoso equipo:</p>
+                    <div class="d-flex justify-content-center align-items-center">
+                        <a href="./records_club.html" class="btn btn-primary" style="margin-right: 2%;">
+                            Récords del Club
+                        </a>
+
+
+                        <a href="./estadisticas_atleta.html" class="btn btn-primary" style="margin-right: 2%;">
+                            Estadísticas Atletas
+                        </a>
+
+                        <a href="./ranking_club.html" class="btn btn-primary">
+                            Ranking del Club
+                        </a>
+
+                    </div>
+                </div>
+
+                <div class="col-lg-5 ">
+                    <img src="img/estadisticas.webp" data-src="img/estadisticas.webp" loading="lazy"
+                        style="width: 60%; margin-left: 25%;" alt="Estadisticas">
+                </div>
+            </div>
+        </div>
+
+
+        <div class="container" style="padding-top: 2rem; padding-bottom: 2rem;">
+            <div class="row justify-content-center">
+                <div class="col-lg-1 "></div>
+                <div class="col-lg-5 d-flex justify-content-center align-items-center">
+                    <img src="img/calendario.webp" style="width: 60%;" alt="Calendario">
+                </div>
+
+                <div class="col-lg-5  py-2">
+                    <h1 class="text-center">CALENDARIO</h1>
+                    <hr class="divider" />
+                    <p> Te facilitamos un calendario de competiciones en Galicia tanto de pista cubierta, cross, pista
+                        al
+                        aire libre, carreras en ruta y carreras populares
+                        Descubre las fechas clave y no te pierdas ninguna oportunidad de participar en las mejores
+                        carreras
+                        de Galicia</p>
+                    <div class="d-flex justify-content-center align-items-center">
+                        <a href="./calendario.html" class="btn btn-primary">
+                            Calendario de Competiciones
+                        </a>
+                    </div>
+                </div>
+
+
+            </div>
         </div>
     </div>
 
@@ -542,7 +551,7 @@ Triki Team" />
     </div>
 
 
-    <div id="projects" style="padding-top: 4rem;">
+    <div id="projects" style="padding-top: 2rem;">
         <div class="container">
             <div class="row">
                 <div class="text-center pb-4 wow fadeInUp" data-wow-delay="0.1s" style="margin-bottom: -5rem;">
@@ -560,8 +569,8 @@ Triki Team" />
                             <img src="./img/patrocinador_deporte_galego.jpg" loading="lazy" alt="Patrocinador 6">
                         </a>
 
-                        <a href="https://fisiogds.es/" target="_blank" style="max-width: 33%; height: auto;" title="Fisio GDS"
-                            style="text-decoration: none; color: inherit; font-weight: inherit;">
+                        <a href="https://fisiogds.es/" target="_blank" style="max-width: 33%; height: auto;"
+                            title="Fisio GDS" style="text-decoration: none; color: inherit; font-weight: inherit;">
 
                             <img src="./img/patrocinador_fisioGDS.jpg" loading="lazy" alt="Patrocinador 2">
                         </a>
@@ -584,13 +593,14 @@ Triki Team" />
                         </a>
 
 
-                        <a href="http://santiagodecompostela.gal/casa_concello/servizo.php?txt=ser_deportes&c=&lg=cas" target="_blank"
-                            style="max-width: 33%; height: auto;" title="Departamento Deportes Santiago"
+                        <a href="http://santiagodecompostela.gal/casa_concello/servizo.php?txt=ser_deportes&c=&lg=cas"
+                            target="_blank" style="max-width: 33%; height: auto;" title="Departamento Deportes Santiago"
                             style="text-decoration: none; color: inherit; font-weight: inherit;">
                             <img src="./img/patrocinador_san.jpg" loading="lazy" alt="Patrocinador 7">
                         </a>
-                        <a href="https://acarrilana.com/es/inicio-es/" target="_blank" style="max-width: 33%; height: auto;"
-                            title="Carrilana" style="text-decoration: none; color: inherit; font-weight: inherit;">
+                        <a href="https://acarrilana.com/es/inicio-es/" target="_blank"
+                            style="max-width: 33%; height: auto;" title="Carrilana"
+                            style="text-decoration: none; color: inherit; font-weight: inherit;">
 
                             <img src="./img/patrocinador_carrilana.jpg" loading="lazy" alt="Patrocinador 1">
                         </a>
@@ -713,7 +723,9 @@ Triki Team" />
 
             <div class="row mt-3">
                 <div class="col-md-12">
-                    <p class="text-center"> <a href="./politica_privacidad.html" class="text-decoration-none">Política de Privacidad</a> | <a href="./aviso_legal.html" class="text-decoration-none">Aviso Legal</a></p>
+                    <p class="text-center"> <a href="./politica_privacidad.html" class="text-decoration-none">Política
+                            de Privacidad</a> | <a href="./aviso_legal.html" class="text-decoration-none">Aviso
+                            Legal</a></p>
                 </div>
             </div>
 
