cambiado tamanho imagen tablets

--- a/index.html
+++ b/index.html
@@ -305,7 +305,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-1 "></div>
                 <div class="col-lg-5  py-2">
-                    <h1 class="text-center">ESTADÍSTICAS</h1>
+                    <h5 class=" text-center text-primary-gradient fw-medium">COMPETICIONES</h5>
+                    <h1 class="text-center">Estadísticas</h1>
                     <hr class="divider" />
                     <p> Descubre los récords del club realizados en las diferentes pruebas atléticas.
                         Además, visualiza las mejores marcas personales de nuestros atletas con licencia.
@@ -328,9 +329,9 @@
                     </div>
                 </div>
 
-                <div class="col-lg-5 ">
+                <div class="col-lg-5 col-md-6">
                     <img src="img/estadisticas.webp" data-src="img/estadisticas.webp" loading="lazy"
-                        style="width: 60%; margin-left: 25%;" alt="Estadisticas">
+                        style="width: 60%; margin-left: 25%; margin-top:10%" alt="Estadisticas">
                 </div>
             </div>
         </div>
@@ -339,12 +340,13 @@
         <div class="container" style="padding-top: 2rem; padding-bottom: 2rem;">
             <div class="row justify-content-center">
                 <div class="col-lg-1 "></div>
-                <div class="col-lg-5 d-flex justify-content-center align-items-center">
+                <div class="col-lg-5  col-md-6 d-flex justify-content-center align-items-center">
                     <img src="img/calendario.webp" style="width: 60%;" alt="Calendario">
                 </div>
 
                 <div class="col-lg-5  py-2">
-                    <h1 class="text-center">CALENDARIO</h1>
+                    <h5 class=" text-center text-primary-gradient fw-medium">COMPETICIONES</h5>
+                    <h1 class="text-center">Calendario</h1>
                     <hr class="divider" />
                     <p> Te facilitamos un calendario de competiciones en Galicia tanto de pista cubierta, cross, pista
                         al
