anhadido titulo inscripciones otras carreras

--- a/calendario.html
+++ b/calendario.html
@@ -135,6 +135,7 @@
         <div class="row justify-content-center text-center d-flex mb-0" id="columnas-contacto">
             <div class="col-lg-8 mb-0 mt-5">
                 <div class="text-center pb-1 wow fadeInUp" data-wow-delay="0.1s" style="margin-bottom: -5%;">
+                    <h5 class="text-primary-gradient fw-medium">INSCRIPCIONES</h5>
                     <h1 class="mb-1">Inscribirse en otra carreras</h1>
                     <p class="mb-0" style="font-weight: var(--bs-body-font-weight);">
                         ¿Quieres inscribirte en otra carrera que no aparece en el calendario? No te preocupes, rellena este formulario y te inscribiremos sin ningún problema.
