Poner canonical en el index

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 
 
     <link rel="icon" href="https://www.atletismosantiago.club/favicon.ico">
+    <link rel="canonical" href="https://www.atletismosantiago.club/" />
+
 
 
 
