Update year and linkedin url

--- a/historia.html
+++ b/historia.html
@@ -125,7 +125,7 @@
                 <p>
                     El proyecto del CAS (Club Atletismo Santiago) nace en 2013 con la intención de convertirse en el club de referencia de la comarca. Objetivo que se cumplió, convirtiéndose en un referente autonómico en categorías absoluta y sub20, en féminas y hombres, luchando en 6 ocasiones por el ascenso a 1ª Nacional y varios podios gallegos por equipos con el equipo masculino.
                     <br><br>
-                    Para la temporada 2024 el CAS se propone, además de mantenerse en la lucha por el ascenso del equipo masculino a 1ª, luchar por los puestos de podium en las pruebas de clubes absolutas, sub 20 de chicos y chicas y buscar la asignatura pendiente: lograr clasificación para el C. España sub20 de clubes.                                    
+                    Para la temporada 2025 el CAS se propone, además de mantenerse en la lucha por el ascenso del equipo masculino a 1ª, luchar por los puestos de podium en las pruebas de clubes absolutas, sub 20 de chicos y chicas y buscar la asignatura pendiente: lograr clasificación para el C. España sub20 de clubes.                                    
                     </p>
                 
             </div>
@@ -211,7 +211,7 @@
                 </div>
             </div>
             <div class="d-flex flex-column flex-sm-row justify-content-between border-top text-center">
-                <p>&copy; 2024 Reservados todos los derechos. <a href="https://www.linkedin.com/in/%C3%B3scar-toimil-plaza/" style="color:#5e5b5b" target="_blank" rel="noopener noreferrer">Ó. Toimil</a>. &copy;</p>
+                <p>&copy; 2025 Reservados todos los derechos. <a href="https://www.linkedin.com/in/oscar-toimil-plaza/" style="color:#5e5b5b" target="_blank" rel="noopener noreferrer">Ó. Toimil</a>. &copy;</p>
             
                 <ul class="list-unstyled d-flex justify-content-center justify-content-sm-end mt-3 mt-sm-0">
                     <li class="ms-4"><a class="bi bi-instagram link-dark d-none d-sm-inline" href="https://www.instagram.com/atletismosantiago/?hl=es" aria-label="Instagram de Atletismo Santiago"></a></li>
