--- a/estadisticas_atleta.html
+++ b/estadisticas_atleta.html
@@ -265,8 +265,8 @@
                 </div>
             </div>
             <div class="d-flex flex-column flex-sm-row justify-content-between border-top text-center">
-                <p>&copy; 2024 Reservados todos los derechos. <a
-                        href="https://www.linkedin.com/in/%C3%B3scar-toimil-plaza/" style="color:#5e5b5b"
+                <p>&copy; 2025 Reservados todos los derechos. <a
+                        href="https://www.linkedin.com/in/oscar-toimil-plaza/" style="color:#5e5b5b"
                         target="_blank" rel="noopener noreferrer">Ó. Toimil</a>. &copy;</p>
 
                 <ul class="list-unstyled d-flex justify-content-center justify-content-sm-end mt-3 mt-sm-0">
@@ -391,7 +391,7 @@
                     option.text = atleta;
                     apellidoSelect.add(option);
                 });
-                temporadaSelect.value = '2024';
+                temporadaSelect.value = '2025';
                 // Añadir una opción vacía al selector de temporadas
                 const optionTemporada = document.createElement('option');
                 optionTemporada.value = '';
