--- a/index.html
+++ b/index.html
@@ -98,8 +98,6 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <li><a class="dropdown-item" href="./historia.html">Historia</a></li>
-                            <li><a class="dropdown-item"
-                                    href="https://swimburger-cas-app-demo.web.app/forms/licencia">Licencias</a></li>
                             <li><a class="dropdown-item" href="./noticias.html">Últimas Noticias</a></li>
                         </ul>
                     </li>
@@ -164,57 +162,56 @@
     </div>
 
     <div id="projects" style="padding-top: 4rem; padding-bottom: 2rem;">
-        <div class="container ">
-            <div class="row">
-                <div class="text-center pb-4 wow fadeInUp" data-wow-delay="0.1s" style="margin-bottom: -5rem;">
-                    <h5 class="text-primary-gradient fw-medium">ACTUALIDAD</h5>
-                    <h1 class="mb-1">Últimas Noticias</h1>
-                    <hr class="divider" />
-                    <br>
+        <div class="container px-lg-5">
+            <div class="text-center pb-4 wow fadeInUp" data-wow-delay="0.1s">
+                <h5 class="text-primary-gradient fw-medium">ATRACTIVOS</h5>
+                <h1 class="mb-1">¿Qué te ofrecemos?</h1>
+                <hr class="divider" />
+                <br>
+            </div>
+            <div class="row gy-5 gx-4 justify-content-center">
+                <div class="col-lg-4 col-sm-6 text-center pt-4 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="position-relative bg-light rounded pt-5 pb-4 px-4" id="cajitas_inicio">
+                        <div class="d-inline-flex align-items-center justify-content-center bg-primary-gradient rounded-circle position-absolute top-0 start-50 translate-middle shadow"
+                            style="width: 100px; height: 100px;">
+                            <i class="fa fa-running fa-3x text-white"></i>
+                        </div>
+                        <h5 class="mt-4 mb-3">Pruebas de Clubes</h5>
+                        <p class="mb-0">Un equipo masculino absoluto luchando por ascender a 1ª división. También equipo
+                            femenino en el gallego absoluto y equipos sub-20 y máster</p>
+                    </div>
                 </div>
-
-            </div>
-
-            <div id="noticias-container" class="row mt-5">
-                <p id="loading-message" style="text-align: center;font-weight: 700 !important;
-                color: #092932;font-size: large;">Cargando noticias, espera unos segundos...</p>
-
-            </div>
-
-
-
-            <!-- Modal para la noticia completa -->
-            <div class="modal fade" id="noticiaModal" tabindex="-1" role="dialog" aria-labelledby="noticiaModalLabel"
-                aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="noticiaModalLabel">Noticia Completa</h5>
-                            <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
+                <div class="col-lg-4 col-sm-6 text-center pt-4 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="position-relative bg-light rounded pt-5 pb-4 px-4" id="cajitas_inicio">
+                        <div class="d-inline-flex align-items-center justify-content-center bg-secondary-gradient rounded-circle position-absolute top-0 start-50 translate-middle shadow"
+                            style="width: 100px; height: 100px;">
+                            <i class="fa fa-building fa-3x text-white"></i>
                         </div>
-                        <div id="modal-body" class="modal-body">
-
+                        <h5 class="mt-4 mb-3">Convenios con Instalaciones</h5>
+                        <p class="mb-0">Para aportar la mayor flexibilidad a los atletas, poseemos convenios con
+                            instalaciones locales de atletismo
+    
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 text-center pt-4 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="position-relative bg-light rounded pt-5 pb-4 px-4" id="cajitas_inicio">
+                        <div class="d-inline-flex align-items-center justify-content-center bg-primary-gradient rounded-circle position-absolute top-0 start-50 translate-middle shadow"
+                            style="width: 100px; height: 100px;">
+                            <i class="fa fa-users fa-3x text-white"></i>
                         </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cerrar</button>
-                        </div>
-
+                        <h5 class="mt-4 mb-3">Grupos de entrenamiento</h5>
+                        <p class="mb-0">Tenemos grupos de tecnificación en todas las pruebas atléticas siempre
+                            asesorados por profesionales
+    
+                        </p>
                     </div>
                 </div>
             </div>
-
-
         </div>
     </div>
 
-
     <br>
-
-
-
-
 
     <section id="milestone" class="bg-cover">
         <div class="container ">
@@ -238,66 +235,6 @@
             </div>
         </div>
     </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <div class="container py-5 px-lg-5">
-        <div class="text-center pb-4 wow fadeInUp" data-wow-delay="0.1s">
-            <h5 class="text-primary-gradient fw-medium">ATRACTIVOS</h5>
-            <h1 class="mb-1">¿Qué te ofrecemos?</h1>
-            <hr class="divider" />
-            <br>
-        </div>
-        <div class="row gy-5 gx-4 justify-content-center">
-            <div class="col-lg-4 col-sm-6 text-center pt-4 wow fadeInUp" data-wow-delay="0.1s">
-                <div class="position-relative bg-light rounded pt-5 pb-4 px-4" id="cajitas_inicio">
-                    <div class="d-inline-flex align-items-center justify-content-center bg-primary-gradient rounded-circle position-absolute top-0 start-50 translate-middle shadow"
-                        style="width: 100px; height: 100px;">
-                        <i class="fa fa-running fa-3x text-white"></i>
-                    </div>
-                    <h5 class="mt-4 mb-3">Pruebas de Clubes</h5>
-                    <p class="mb-0">Un equipo masculino absoluto luchando por ascender a 1ª división. También equipo
-                        femenino en el gallego absoluto y equipos sub-20 y máster</p>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center pt-4 wow fadeInUp" data-wow-delay="0.3s">
-                <div class="position-relative bg-light rounded pt-5 pb-4 px-4" id="cajitas_inicio">
-                    <div class="d-inline-flex align-items-center justify-content-center bg-secondary-gradient rounded-circle position-absolute top-0 start-50 translate-middle shadow"
-                        style="width: 100px; height: 100px;">
-                        <i class="fa fa-building fa-3x text-white"></i>
-                    </div>
-                    <h5 class="mt-4 mb-3">Convenios con Instalaciones</h5>
-                    <p class="mb-0">Para aportar la mayor flexibilidad a los atletas, poseemos convenios con
-                        instalaciones locales de atletismo
-
-                    </p>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center pt-4 wow fadeInUp" data-wow-delay="0.5s">
-                <div class="position-relative bg-light rounded pt-5 pb-4 px-4" id="cajitas_inicio">
-                    <div class="d-inline-flex align-items-center justify-content-center bg-primary-gradient rounded-circle position-absolute top-0 start-50 translate-middle shadow"
-                        style="width: 100px; height: 100px;">
-                        <i class="fa fa-users fa-3x text-white"></i>
-                    </div>
-                    <h5 class="mt-4 mb-3">Grupos de entrenamiento</h5>
-                    <p class="mb-0">Tenemos grupos de tecnificación en todas las pruebas atléticas siempre
-                        asesorados por profesionales
-
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <div >
         <div class="container" style="padding-top: 2rem">
@@ -364,10 +301,6 @@
             </div>
         </div>
     </div>
-
-
-
-
 
     <div id="projects" style="padding-top: 4rem; padding-bottom:2rem;">
         <div class="container">
@@ -500,10 +433,6 @@
     </div>
 
 
-
-
-
-
     <footer class="bg-light py-5 mt-5">
 
         <div class="container">
@@ -515,7 +444,7 @@
                         <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Club</a></li>
                         <li class="nav-item mb-2"><a href="./calendario.html"
                                 class="nav-link p-0 text-muted">Calendario</a></li>
-                        <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Estadisticas</a></li>
+                        <li class="nav-item mb-2"><a href="./estadisticas_atleta.html" class="nav-link p-0 text-muted">Estadisticas</a></li>
                         <li class="nav-item mb-2"><a href="./patrocinadores.html"
                                 class="nav-link p-0 text-muted">Patrocinadores</a></li>
                         <li class="nav-item mb-2"><a href="./contacto.html" class="nav-link p-0 text-muted">Contacto</a>
@@ -528,8 +457,6 @@
                     <ul class="nav flex-column">
                         <li class="nav-item mb-2"><a href="./historia.html" class="nav-link p-0 text-muted">Historia</a>
                         </li>
-
-
 
                         <li class="nav-item mb-2"><a href="./noticias.html" class="nav-link p-0 text-muted">Últimas
                                 Noticias</a></li>
@@ -611,117 +538,6 @@
 
 
     <script>
-        let noticiasData; // Variable global para almacenar los datos de noticias
-
-        // Cargar noticias desde el JSON
-        fetch('https://raw.githubusercontent.com/Toimil/AtletismoSantiago/main/data/NoticiasCAS.json')
-            .then(response => response.json())
-            .then(data => {
-                noticiasData = data.filter(noticia => noticia.ID !== "");
-                let cantidadNoticias;
-
-                // Determinar la cantidad de noticias según el tipo de dispositivo
-                if (window.innerWidth < 577) { // Móvil
-                    cantidadNoticias = 1;
-                } else if (window.innerWidth < 993) { // Tablet
-                    cantidadNoticias = 2;
-                } else { // Ordenador
-                    cantidadNoticias = 3;
-                }
-
-                mostrarNoticias(noticiasData, cantidadNoticias);
-                document.getElementById('loading-message').style.display = 'none';
-            })
-            .catch(error => {
-                // Manejar errores, por ejemplo, mostrar un mensaje de error
-                document.getElementById('loading-message').innerHTML = 'Error al cargar las noticias. Por favor, inténtelo de nuevo más tarde.';
-            });
-
-        function mostrarNoticias(noticias, cantidadMaxima) {
-            const noticiasContainer = document.getElementById('noticias-container');
-            const noticiasCargadas = noticiasContainer.querySelectorAll('.noticia-card').length;
-
-            // Ordenar las noticias por fecha en orden descendente
-            noticias.sort((a, b) => new Date(convertirAFecha(b.Fecha)) - new Date(convertirAFecha(a.Fecha)));
-
-            noticias.slice(noticiasCargadas, noticiasCargadas + cantidadMaxima).forEach(noticia => {
-                const imagenUrl = noticia.Imagen || 'https://www.atletismosantiago.club/img/bg_banner1.webp';
-
-                const card = `
-            <div class="col-md-6 col-lg-4 mb-4 noticia-card">
-                <div class="card">
-                    <img src="${imagenUrl}" class="card-img-top" loading="lazy" alt="${noticia.Titulo}">
-                    <div class="card-body">
-                        <h5 class="card-title" style="text-align: center;">${noticia.Titulo}</h5>
-                        <p class="card-text">${noticia.Contenido.substring(0, 150)}...</p>
-                        <div class="text-center">
-                            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#noticiaModal" onclick="cargarNoticia('${noticia.ID}')">Leer más</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        `;
-                noticiasContainer.innerHTML += card;
-            });
-
-            // Mostrar el botón de cargar más si hay más noticias por cargar
-            if (noticiasCargadas + cantidadMaxima < noticias.length) {
-                const cargarMasButton = `
-            <div class="col-12 text-center mt-3">
-                <button class="btn btn-secondary cargar-mas-button" onclick="redirigirAotraWeb()">Ver más noticias</button>
-            </div>
-        `;
-                noticiasContainer.innerHTML += cargarMasButton;
-            } else {
-                const cargarMasButton = document.querySelector('.cargar-mas-button');
-                if (cargarMasButton) {
-                    cargarMasButton.style.display = 'none';
-                }
-            }
-        }
-
-        function cargarMasNoticias(cantidadMaxima) {
-            mostrarNoticias(noticiasData, cantidadMaxima);
-
-        }
-
-        function redirigirAotraWeb() {
-            window.location.href = 'https://atletismosantiago.club/noticias.html';
-        }
-
-        function cargarNoticia(ID) {
-
-            // Buscar la noticia con el ID indicado
-            let noticia;
-            for (let i = 0; i < noticiasData.length; i++) {
-                if (noticiasData[i].ID == ID) {
-                    noticia = noticiasData[i];
-                    break; // Importante: detener el bucle una vez que se ha encontrado la noticia
-                }
-            }
-            /*
-            // Convertir la cadena de fecha a un objeto Date
-            const fechaNueva = new Date(noticia.Fecha);
-
-            // Obtener los componentes de la fecha
-            const dia = fechaNueva.getDate();
-            const mes = fechaNueva.getMonth() + 1; // Sumar 1 porque los meses comienzan desde 0
-            const ano = fechaNueva.getFullYear();
-
-            // Formatear la fecha como "DD/MM/YYYY"
-            const fechaFormateada = `${dia}/${mes}/${ano}`;*/
-            const modalBody = document.getElementById('modal-body');
-            const imagenUrl = noticia.Imagen || 'https://www.atletismosantiago.club/img/bg_banner1.webp';
-
-            modalBody.innerHTML = `
-
-                <img src="${imagenUrl}" class="img-fluid mb-3" loading="lazy" alt="${noticia.Titulo}">
-                <h5>${noticia.Titulo}</h5>
-                <p>${noticia.Contenido}</p>
-                <p><strong>Fecha:</strong> ${noticia.Fecha}</p>
-            `;
-        }
-
         // Función para verificar si el dispositivo es móvil
         function isMobileDevice() {
             if (screen.width < 768 || window.innerWidth < 768)
@@ -739,9 +555,6 @@
                 desktoppatrocinadores.style.display = 'none'; // Ocultar las imágenes de escritorio
             }
         }
-
-
-
 
         // Función para manejar el evento de cambio de tamaño de la ventana
         function handleWindowResize() {
@@ -798,11 +611,6 @@
     <style>
         #modal-body p {
             white-space: pre-line;
-        }
-
-        .noticia-card .card-img-top {
-            width: 100%;
-            object-fit: cover;
         }
     </style>
 </body>
