Reducido margen seccino atractivos

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
     <div id="projects" style="padding-top: 4rem; padding-bottom: 2rem;">
         <div class="container px-lg-5">
-            <div class="text-center pb-4 wow fadeInUp" data-wow-delay="0.1s">
+            <div class="text-center pb-2" data-wow-delay="0.1s">
                 <h5 class="text-primary-gradient fw-medium">ATRACTIVOS</h5>
                 <h1 class="mb-1">¿Qué te ofrecemos?</h1>
                 <hr class="divider" />
